enh(sonar): SonarQube / Lint fixes